# subgraph-retrieval-toolkit

./: .gitignore  LICENSE  README.md  elegant_retrieve.py  entity_link.py  paper.md  preprocess.py  pyproject.toml  requirements.txt  retrieve.py  train.py  visualize.py
.github/workflows/: pytest.yml
docs/: cli.md  cli.rst  conf.py  getting_started.md  getting_started.rst  index.md  index.rst  install.md  install.rst  modules.md  modules.rst  setup_freebase.rst  setup_wikidata.md  setup_wikidata.rst  srtk.entity_linking.rst  srtk.knowledge_graph.md  srtk.knowledge_graph.rst  srtk.md  srtk.preprocessing.md  srtk.preprocessing.rst  srtk.rst  srtk.scorer.md  srtk.scorer.rst  tutorials.md
docs/setups/: setup_freebase.md  setup_qendpoint_rootless.md  setup_wikidata.md
knowledge_graph/: __init__.py  base_graph.py  cache.py  freebase.py  graph_base.py  knowledge_graph.py  wikidata.py
preprocess/: load_dataset.py  merge_ground.py  negative_sampling.py  score_path.py  search_path.py
scorer/: encoder.py  scorer.py
src/srtk/: cli.py  link.py  link_wikidata.py  preprocess.py  retrieve.py  train.py  utils.py  visualize.py
src/srtk/entity_linking/: __init__.py  dbpedia.py  linker_base.py  wikidata.py
src/srtk/knowledge_graph/: __init__.py  dbpedia.py  freebase.py  graph_base.py  utils.py  (+1 more)
src/srtk_yuanchun/: retrieve.py
tests/: test_dbpedia.py  test_encoder.py  test_freebase.py  test_link.py  test_scorer.py  test_wikidata.py
tutorials/: 2.end_to_end_subgraph_retrieval.ipynb  3.weak_train_wikidata.ipynb  4.weak_train_freebase.ipynb  5.supervised_train_wikidata.ipynb  6.extend_to_new_kg.ipynb
(+11 files in other folders)
